# SuperaAtomic

./: .gitignore  README.md  setup.py
python/supera/: __init__.py
src/: CMakeLists.txt
src/supera/: CMakeLists.txt  pybind_mkdoc.h  supera_pybind.cxx
src/supera/algorithm/: AlgorithmBase.h  BBoxBase.h  BBoxInteraction.cxx  BBoxInteraction.h  CMakeLists.txt  LArTPCMLReco3D.cxx  LArTPCMLReco3D.h  LabelBase.h  Loggable.h  ParticleIndex.cxx  ParticleIndex.h
src/supera/algorithms/: BBoxInteraction.cxx  BBoxInteraction.h
src/supera/base/: BBox.cxx  BBox.h  CMakeLists.txt  Configurable.h  ImageMeta3D.cxx  ImageMeta3D.h  Loggable.h  Logger.cxx  Logger.h  PSet.h  Parser.cxx  Parser.h  Particle.h  ParticleGroup.cxx  ParticleGroup.h  Point.cxx  Point.h  SuperaData.cxx  SuperaData.h  SuperaEvent.h  SuperaType.h  Voxel.cxx  Voxel.h  base_pybind.cxx  base_pybind.h  meatloaf.h
src/supera/base/arxiv/: Parser.cxx  Parser.h
src/supera/data/: CMakeLists.txt  Event.cxx  Event.h  ImageMeta3D.cxx  ImageMeta3D.h  Neutrino.cxx  Neutrino.h  Particle.cxx  Particle.h  data_pybind.cxx  data_pybind.h
src/supera/process/: CMakeLists.txt  Driver.cxx  Driver.h  process_pybind.cxx  process_pybind.h
src/supera/test/: CMakeLists.txt  TestEvents.cxx  TestEvents.h  test_pybind.cxx  test_pybind.h
src/supera/test/events/: NumuCCInc.cxx  PCMuon.cxx  PCMuon.ixx
test/: test_events.py  test_import.py
